Persistence for annotation indexes